Fix some typo.